metacatui/src/main/webapp/css/metacatui-common.css
/* ... */
.prov-chart.sources{
   	margin-right: 15px;
   	padding-right: 10px;
	border-right-width: 1px;
   	border-right-style: solid;
}
.prov-chart.derivations{
   	margin-left: 17px;
   	padding-left: 16px;
	border-left-width: 1px;
   	border-left-style: solid;	
}
.sources-programs{
	padding-left: 0px;
    padding-right: 0px;
    margin-left: 77px;
}
.derivations-programs{
	padding-left: 0px;
    padding-right: 0px;
    margin-left: -84px;
}
.prov-chart.derivations.has-programs{
	margin-left: 17px;
}
.prov-chart.sources .programs .connecter {
    margin-left: 15px;
    width: 10px;
}
.prov-chart.derivations .programs .connecter {
    left: -76px;
    width: 9px;
}
.prov-chart .node.program{
	fill: #FFFFFF;
}
.prov-chart .programs svg{
	position: absolute;
}
.prov-chart .node{
	border-width: 1px;
	border-style: solid;
	border-radius: 50%;
	-moz-border-radius: 50%;
	-webkit-border-radius: 50%;
	background-color: #FFF;
	width: 25px;
	height: 25px;
	padding: 15px;
	font-size: 25px;
	margin-bottom: 10px;
	color: #666;
	position: absolute;
	cursor: pointer;
}
.prov-chart .node:focus{
	outline: none;
}
.prov-chart .node.active,
#article-container.active,
.entitydetails.active{
	box-shadow: 0 0 5px rgb(50, 161, 19),0 0 12px rgb(0, 255, 213);
	-webkit-box-shadow: 0 0 5px rgb(50, 161, 19),0 0 12px rgb(0, 255, 213);
}
.prov-chart .node.previous{
	border-width: 3px;
}
.prov-chart .connecter{
	border-top-width: 1px;
	border-top-style: solid;
	position: absolute;
	top: 0px;
	height: 10px;
	width: 15px;
	left: 0px;
}
.prov-chart.expand-collapse .collapsed{
	display: none;
}
.prov-chart.expand-collapse .expand-control,
.prov-chart.expand-collapse .collapse-control{
	font-size: .9em;
	position: absolute;
	top: 100%;
	top: calc(100% + 30px);
	left: 10px;
	width: 90px;
	cursor: pointer;
}
.prov-chart.expand-collapse .control .icon{
	margin-left: 5px;
	font-size: 1.5em;
	vertical-align: sub;
}
.prov-chart.derivations .connecter{
	width: 17px;
	left: 0px;
	top: 50%;
}
.prov-chart.sources .connecter{
	left: 45px; /* fallback */
	left: calc(100% - 15px);
}
.prov-chart .prov-pointer{
	width: 15px;
	height: 15px;
	position: absolute;
	top: 50%; /* fallback */
	top: calc(50% - 7px);
}
.prov-chart.sources .prov-pointer{
	right: -15px;
}
.prov-chart.derivations .prov-pointer{
	left: -17px;
}
.prov-chart.derivations.one-derivation .connecter{
	margin-left: -17px;
}
.prov-chart.derivations.one-derivation .prov-pointer{
	left: 0px;
}
.prov-chart > .title{
	font-size: .9em;
	font-weight: normal;
	width: 90px;
	line-height: 1em;
	top: -70px;
	position: absolute;
}
.prov-chart.derivations > .title{
	left: 0px;
	text-align: center;
}
.prov-chart .node > i{
	vertical-align: text-top;
}
.prov-chart .metadata.node i{
	margin-left: 5px;
}
.provenance-statement a{
	/*Keep the icons and links right by each other */
	display: inline;
	word-break: break-word; 
}
.provenance-statement .currently-viewing{
	font-weight: bold;	
}
.prov-chart .image.node{
	background-size: cover;
	background-position: 50% 50%;
}
.prov-chart .node.editor{
	border-color: #333;
    border-style: dashed;
}
.prov-chart.editor.empty .prov-pointer{
	-webkit-filter: saturate(0);
    filter: saturate(0);
}
.node .editor.icon {
    margin-left: 3px;
}
.prov-chart .program.node.active{
	stroke: #00eb89;
	stroke-width: 2px;
	transition: stroke 200ms; 
}
.program-icon{
	font-size: 25px;
}
/********* The Prov Chart colors *******/		
.prov-chart .node.uniqueNode1,
.entitydetails.uniqueNode1{
	border-color: #FF0000;
	stroke: #FF0000;
}
.prov-chart .node.uniqueNode1 .icon,
.provenance-statement .node-link.uniqueNode1 .icon,
.prov-chart .uniqueNode1 + .program-icon{
	color: #FF0000;
	fill: #FF0000;
}
.prov-chart .node.uniqueNode2,
.entitydetails.uniqueNode2{
	border-color: #878700;
	stroke: #878700;
}
.prov-chart .node.uniqueNode2 .icon,
.provenance-statement .node-link.uniqueNode2 .icon,
.prov-chart .uniqueNode2 + .program-icon{
	color: #878700;
	fill: #878700;
}
.prov-chart .node.uniqueNode3,
.entitydetails.uniqueNode3{
	border-color: #00EAFF;
	stroke: #00EAFF;
}
.prov-chart .node.uniqueNode3 .icon,
.provenance-statement .node-link.uniqueNode3 .icon,
.prov-chart .uniqueNode3 + .program-icon{
	color: #00EAFF;
	fill: #00EAFF;
}
.prov-chart .node.uniqueNode4,
.entitydetails.uniqueNode4{
	border-color: #AA00FF;
	stroke: #AA00FF;
}
.prov-chart .node.uniqueNode4 .icon,
.provenance-statement .node-link.uniqueNode4 .icon,
.prov-chart .uniqueNode4 + .program-icon{
	color: #AA00FF;
	fill: #AA00FF;
}
.prov-chart .node.uniqueNode5,
.entitydetails.uniqueNode5{
	border-color: #FF7F00;
	stroke: #FF7F00;
}
.prov-chart .node.uniqueNode5 .icon,
.provenance-statement .node-link.uniqueNode5 .icon,
.prov-chart .uniqueNode5 + .program-icon{
	color: #FF7F00;
	fill: #FF7F00;
}
.prov-chart .node.uniqueNode6,
.entitydetails.uniqueNode6{
	border-color: #739900;
	stroke: #739900;
}
.prov-chart .node.uniqueNode6 .icon,
.provenance-statement .node-link.uniqueNode6 .icon,
.prov-chart .uniqueNode6 + .program-icon{
	color: #739900;
	fill: #739900;
}
.prov-chart .node.uniqueNode7,
.entitydetails.uniqueNode7{
	border-color: #0095FF;
	stroke: #0095FF;
}
.prov-chart .node.uniqueNode7 .icon,
.provenance-statement .node-link.uniqueNode7 .icon,
.prov-chart .uniqueNode7 + .program-icon{
	color: #0095FF;
	fill: #0096FF;
}
.prov-chart .node.uniqueNode8,
.entitydetails.uniqueNode8{
	border-color: #FF00AA;
	stroke: #FF00AA;
}
.prov-chart .node.uniqueNode8 .icon,
.provenance-statement .node-link.uniqueNode8 .icon,
.prov-chart .uniqueNode8 + .program-icon{
	color: #FF00AA;
	fill: #FF00AA;
}
.prov-chart .node.uniqueNode9,
.entitydetails.uniqueNode9{
	border-color: #FFD400;
	stroke: #FFD400;
}
.prov-chart .node.uniqueNode9 .icon,
.provenance-statement .node-link.uniqueNode9 .icon,
.prov-chart .uniqueNode9 + .program-icon{
	color: #FFD400;
	fill: #FFD400;
}
.prov-chart .node.uniqueNode10,
.entitydetails.uniqueNode10{
	border-color: #6AFF00;
	stroke: #6AFF00;
}
/* ... */

